<resources>
    <string name="app_name">Vigilantes Urbanos</string>
    <string name="topbarlogin">Login</string>
    <string name="emaillogin">E-mail</string>
    <string name="senha">Senha</string>
    <string name="vigilante">Vigilante</string>
    <string name="oap">OAP</string>
    <string name="entrar">ENTRAR</string>
    <string name="cadastrar">Cadastra-se</string>
    <string name="cadastrardadospessoais">Cadastro Vigilante - Dados Pessoais</string>
    <string name="nome">Nome Completo*</string>
    <string name="telefone">Telefone*</string>
    <string name="email">E-mail*</string>
    <string name="RG">RG*</string>
    <string name="nacionalidade">Nacionalidade*</string>
    <string name="cep">CEP*</string>
    <string name="endereco">Endereço*</string>
    <string name="numero">Número*</string>
    <string name="bairro">Bairro*</string>
    <string name="uf">UF*</string>
    <string name="cidade">Cidade*</string>
    <string name="complemento">Complemento*</string>
    <string name="cpf2">CPF*</string>
    <string name="senha2">Senha*</string>
    <string name="confirmarsenha">Confirmar Senha*</string>
    <string name="continuar">CONTINUAR</string>
    <string name="cadastrardadosbancarios">Cadastro Vigilante - Dados Bancários</string>
    <string name="banco">Banco*</string>
    <string name="agencia">Agência*</string>
    <string name="contacorrente">Conta Corrente*</string>
    <string name="numerocartao">Número do Cartão*</string>
    <string name="datadevencimento">Data de vencimento*</string>
    <string name="codigo1">Código CVV2*</string>
    <string name="cadastrar2">CADASTRAR</string>
    <string name="cadastrooap">Cadastro OAP</string>
    <string name="inicialvigilante">Incidentes Vigilante</string>
    <string name="beneficiosinicial">Benefícios adquiridos:</string>
    <string name="datainicial">Data do Envio:</string>
    <string name="localinicial">Local:</string>
    <string name="tipoinicial">Tipo:</string>
    <string name="descricaoinicial">Descrição:</string>
    <string name="comentarioOapinicial">Comentário OAP:</string>
    <string name="inicialoap">Incidentes OAP</string>
    <string name="recebidosoapinicial">Incidentes recebidos</string>
    <string name="avaliarincidente">AVALIAR INCIDENTE</string>
    <string name="novotipo">NOVO TIPO</string>
    <string name="fechar">FECHAR</string>
    <string name="telabeneficios">Benefícios</string>
    <string name="dinheiro">Dinheiro:</string>
    <string name="vigicoin">VigiCoin:</string>
    <string name="porcentagem">Porcentagem obtida no desconto</string>
    <string name="imposto">Tipo de Imposto</string>
    <string name="desconto">Desconto obtido</string>
    <string name="depositar">DEPOSITAR DINHEIRO</string>
    <string name="depositarvigicoin">DEPOSITAR VIGICOIN</string>
    <string name="emailincorreto">Não há nenhuma conta cadastrada com este e-mail!</string>
    <string name="senhaincorreta">Senha incorreta!</string>
    <string name="errologar">Erro ao logar tente novamente!</string>
    <string name="sair">SAIR</string>
    <string name="beneficiosenviados">Benefício enviado:</string>
    <string name="filtrar">FILTRAR</string>
</resources>
