<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cores"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="415dp"
        android:layout_height="36dp"
        android:background="@android:color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/inicialoap"
        app:subtitleTextColor="@android:color/white">

        <TextView
            android:id="@+id/textView150"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:text="@string/filtrar"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="422dp"
        android:layout_height="59dp"
        android:background="#000066"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/recebidosoapinicial"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="20dp" />

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/button5"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#6666FF"
        android:onClick="AvaliarIncidente"
        android:text="@string/avaliarincidente"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#6666FF"
        android:onClick="sair"
        android:text="@string/sair"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="392dp"
        android:layout_height="458dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

</android.support.constraint.ConstraintLayout>