<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cores"
    tools:context=".DadosIncidenteOAP">



    <ImageView
        android:id="@+id/imageView100"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@+id/toolbar3"/>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView100"
        android:text="@string/beneficiosenviados"
        android:textColor="@android:color/white"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@id/imageView100"
        android:layout_toRightOf="@id/textView26"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datainicial"
        android:textColor="@android:color/white"
        android:layout_below="@id/textView26"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@id/textView26"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/textView28"/>

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localinicial"
        android:textColor="@android:color/white"
        android:layout_below="@id/textView28"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@id/textView28"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/textView30"/>

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipoinicial"
        android:textColor="@android:color/white"
        android:layout_below="@id/textView30"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@id/textView30"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/textView32"/>

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricaoinicial"
        android:textColor="@android:color/white"
        android:layout_below="@id/textView32"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@id/textView32"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/textView34"/>

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comentarioOapinicial"
        android:textColor="@android:color/white"
        android:layout_below="@id/textView34"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@id/textView34"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/textView36"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="415dp"
        android:layout_height="36dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

</RelativeLayout>